host/crates/tui/tests/snapshots/snapshots__detail_image_response.snap
---
source: crates/tui/tests/snapshots.rs
expression: "detail(12.0, MEDIUM, path_ends(\".png\"), \"l\")"
---
 traffic-police  Pixel 8 [demo]  com.example.shop  pid 4312  ● LIVE  ✎ 1 rule active          26 requests · 14 KB in · 18 KB out · 1 failed
╭─ Network · all app traffic ────────────────────────────────────────────────────────────────── ━ Receiving 3.9 KB/s   ━ Sending 2.4 KB/s ─╮
│  12 KB/s                                                                                  ┊                                              │
│                                                                                           ┊           ▃▇▇▅▁                              │
│ 6.0 KB/s                                                                                  ┊         ▁▅█████▆▆▆▆▄▁         ▁▁▁▂▂▄▄▃▂▂▂▃▃▂ │
│                                                                                           ▃▄▅▆▇████▇█████████████▇▆▅▅▅▅▆▇███████████████ │
│        0 ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┊┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄ │
│                                                                                           🮂▀🮄🮆██████🮆🮅🮅🮅🮆████🮆🮅🮅🮆███🮆🮅🮄🮆██████████████🮆🮄 │
│ 4.0 KB/s                                                                                  ┊    ▔▔▔▔      ▔🮃🮃▔    ▔🮂▔    ▀████🮆🮂  🮂🮃▀▀🮂   │
│                                                                                           ┊                              ▀██🮄            │
│ 8.0 KB/s                                                                                  ┊                               ▔▔             │
│                                                                                           00:00.000            00:05.000                 │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Requests 26 ─ Connection ─ Thread ─ Rules ─ Logdawg ─────────────────────╮ ╭─ user_1024.png ─ Response body ─ Request body ─────────────╮
│ Name                  Size  Type      Status         Time   Timeline      │ │ ▄▄▄▄▄▄▄▄▄▄                                                 │
│ token                364 B  json      200          513 ms           ▎    ▐│ │ ▄▄▄▄▄▄▄▄▄▄                                                 │
│ sessions             290 B  json      200          2.11 s           🮉▎   ▐│ │ ▄▄▀▀▀ ▀▀▄▄                                                 │
│ notifications        306 B  json      200          1.77 s           ▐▎   ▐│ │ ▄▄▄▄▄▄▄▄▄▄                                                 │
│ events                17 B  json      200          1.38 s           🮇▍   ▐│ │ ▄        ▄                                                 │
│ user_1024.png       4.9 KB  png       200          494 ms            ▎   ▐│ │                                                            │
│ notifications        306 B  json      200          1.33 s            🮉   ▐│ │                                                            │
│ products?catego…    1.0 KB  json      200          431 ms            ▏   ▐│ │                                                            │
│ config                 0 B            302           61 ms            ▕   ▐│ ╰────────────────────────────────────────────────────────────╯
│ ↪ config.json        103 B  json      200          315 ms            ▕   ▐│ ╭─ Overview ─ Response ─ Request ─ Call Stack ─ Logs ────────╮
│ items                149 B  json      200          2.79 s            🮇█  ▐│ │ HTTP/2 200 OK                                              │
│ metrics                6 B  protobuf  200          338 ms             ▏  ▐│ │                                                            │
│ notifications        306 B  json      200          1.65 s             ▊  ▐│ │ Headers (6)                                                │
│ events                17 B  json      200          1.09 s             ▌  ▐│ │ date: Tue, 29 Sep 2026 05:10:03 GMT                        │
│ promo-banner-v3…     148 B  json      404          277 ms             ▕  ▐│ │ content-type: image/png                                    │
│ reviews               86 B  json      200          516 ms              ▎ ▐│ │ content-length: 4987                                       │
│ notifications        306 B  json      200          1.72 s              ▊ ▐│ │ cache-control: public, max-age=86400                       │
│ checkout              99 B  json      200          2.33 s              █ ▐│ │ etag: "a1f9c3"                                             │
│ cancel               305 B  html      500          222 ms              ▕ ▐│ │ age: 312                                                   │
│ lookup?fields=c…     120 B  json      200          291 ms              ▕ ▐│ │                                                            │
│ notifications        306 B  json      200          1.42 s              ▕▌▐│ │ Body  PNG image 96×96, 4.9 KB  [parsed · p: source]        │
│ events                17 B  json      200          958 ms               ▍ │ │  ▄▄▄▄▄▄                                                    │
│ status?orderId=…     146 B  json      200          329 ms               ▏ │ │  ▄▀▀▀▀▄                                                    │
│ recommendations…                      ···          1.90 s               🮋 │ │  ▄▄▄▄▄▄                                                    │
╰───────────────────────────────────────────────────────────────────────────╯ ╰────────────────────────────────────────────────────────────╯
 ←→ tabs   ↑↓ move   / search   nN next/previous   y copy   w save   Enter fold   p parsed/source   ? help       ⚠ studio inspector present
