host/crates/tui/tests/snapshots/snapshots__detail_in_flight.snap
---
source: crates/tui/tests/snapshots.rs
expression: "detail(12.0, MEDIUM, |t| t.state.is_open(), \"\")"
---
 traffic-police  Pixel 8 [demo]  com.example.deepid_example  pid 4312  ● LIVE  ✎ 1 rule active           26 requests · 13 KB in · 18 KB out
╭─ Network · all app traffic ────────────────────────────────────────────────────────────────── ━ Receiving 3.1 KB/s   ━ Sending 1.3 KB/s ─╮
│  16 KB/s                                                                             ┊                                                   │
│                                                                                      ┊                                                   │
│                                                                                      ┊            ┏━┓                                    │
│                                                                                      ┊            ┃ ┃                                    │
│ 8.0 KB/s                                                                             ┊            ┃ ┃                ┏━┓                 │
│                                                                                      ┊            ┃ ┗━┓  ┏┓      ┏━┓ ┃ ┃          ┏━┓    │
│                                                                                      ┊      ┏━┓━┓ ┃   ┗━┓┛┗━━┏━┓━┛ ┗━┓ ┏━━━━━━┓━━┓┃ ┃    │
│                                                                                      ━━┏━━━━┛ ┗━┗━┛ ┏━┛ ┗┓┏━━┛ ┗━━━┛ ┗━┛┓┏━━┓┏┗━━┗┛ ┗━┓━ │
│        0                                                                             ━━┛        ┗━━━┛    ┗┛             ┗┛  ┗┛    ┗━┛ ┗━ │
│                                                                                      00:00.000            00:05.000            00:10.000 │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Requests 26 ─ Connection ─ Thread ─ Rules ───────────────────────────────╮╭─ threshold ─ Response body ─ Request body ──────────────────╮
│ Name                    Size Type      Status         Time Timeline       ││ waiting for the response…                                   │
│ token                  391 B json      200          513 ms         █     ▐││                                                             │
│ init                   316 B json      200          2.01 s          ▏    ▐││                                                             │
│ monitor                302 B json      200          1.58 s          █    ▐││                                                             │
│ events                  17 B json      200          1.45 s          █▏   ▐││                                                             │
│ u_4821.png            4.5 KB png       200          476 ms          █    ▐││                                                             │
│ monitor                302 B json      200          1.53 s           ▊   ▐││                                                             │
│ challenge              144 B json      200          386 ms           ▏   ▐││                                                             │
│ config                   0 B           302           61 ms           ▏   ▐│╰─────────────────────────────────────────────────────────────╯
│ ↪ config.json          106 B json      200          195 ms           ▏   ▐│╭─ Overview ─ Response ─ Request ─ Call Stack ────────────────╮
│ attest                 180 B json      200          2.75 s           ▐█  ▐││ Request           threshold                                 │
│ metrics                  6 B protobuf  200          224 ms           ▕   ▐││ Method            GET                                       │
│ monitor                302 B json      200          1.41 s            ▋  ▐││ Status            ···                                       │
│ events                  17 B json      200          1.14 s            ▌  ▐││ URL               https://deepid.example.app/api/sdk/       │
│ liveness-model-v3…     150 B json      404          346 ms            ▏  ▐││                   liveness/threshold                        │
│ enroll                  72 B json      200          2.08 s            ▕▊ ▐││ Request type      —                                         │
│ documents               93 B json      200          515 ms            ▕▏ ▐││ Response type     —                                         │
│ monitor                302 B json      200          1.50 s            ▕▋ ▐││ Response size     —                                         │
│ report                 305 B html      500          219 ms             ▏ ▐││ Token             JWT HS256 ·                               │
│ lookup?fields=cou…     101 B json      200          507 ms             ▕ ▐││                   expires 06:10:00.000 (in 59 min) ·        │
│ monitor                302 B json      200          1.49 s             ▕▌▐││                   sub user_4821 ·                           │
│ status?sessionId=…     263 B json      200          326 ms             ▕  ││                   iss https://auth.example.app  in request  │
│ threshold                              ···          1.90 s              █ ││                   header Authorization · Enter decodes      │
│ events                  17 B json      200          970 ms              ▌ ││ Initiating thread DefaultDispatcher-worker-4  id 61 ·       │
╰───────────────────────────────────────────────────────────────────────────╯╰─────────────────────────────────────────────────────────────╯
 ←→ tabs   ↑↓ move   / search   nN next/previous   y copy   w save   Enter fold   p parsed/source   ? help       ⚠ studio inspector present
