host/crates/tui/tests/snapshots/snapshots__detail_overview_json.snap
---
source: crates/tui/tests/snapshots.rs
expression: "detail(12.0, MEDIUM, init(), \"\")"
---
 traffic-police  Pixel 8 [demo]  com.example.deepid_example  pid 4312  ● LIVE  ✎ 1 rule active           26 requests · 13 KB in · 18 KB out
╭─ Network · all app traffic ────────────────────────────────────────────────────────────────── ━ Receiving 3.1 KB/s   ━ Sending 1.3 KB/s ─╮
│  16 KB/s                                                                             ┊                                                   │
│                                                                                      ┊                                                   │
│                                                                                      ┊            ┏━┓                                    │
│                                                                                      ┊            ┃ ┃                                    │
│ 8.0 KB/s                                                                             ┊            ┃ ┃                ┏━┓                 │
│                                                                                      ┊            ┃ ┗━┓  ┏┓      ┏━┓ ┃ ┃          ┏━┓    │
│                                                                                      ┊      ┏━┓━┓ ┃   ┗━┓┛┗━━┏━┓━┛ ┗━┓ ┏━━━━━━┓━━┓┃ ┃    │
│                                                                                      ━━┏━━━━┛ ┗━┗━┛ ┏━┛ ┗┓┏━━┛ ┗━━━┛ ┗━┛┓┏━━┓┏┗━━┗┛ ┗━┓━ │
│        0                                                                             ━━┛        ┗━━━┛    ┗┛             ┗┛  ┗┛    ┗━┛ ┗━ │
│                                                                                      00:00.000            00:05.000            00:10.000 │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Requests 26 ─ Connection ─ Thread ─ Rules ───────────────────────────────╮╭─ init ─ Response body ─ Request body ─────────────────── ✕ ─╮
│ Name                    Size Type      Status         Time Timeline       ││ {                                                           │
│ token                  391 B json      200          513 ms         █     ▐││   "ok": true,                                               │
│ init                   316 B json      200          2.01 s          ▏    ▐││   "sessionId": "session_15bce3a5a963c9fde0ebe700e9d76981",  │
│ monitor                302 B json      200          1.58 s          █    ▐││   "deepid": "-a02mRsDvpclHF1i8eoravsWmApTcmegxpqeKsY",      │
│ events                  17 B json      200          1.45 s          █▏   ▐││   "config": {                                               │
│ u_4821.png            4.5 KB png       200          476 ms          █    ▐││     "pollIntervalMs": 1500,                                 │
│ monitor                302 B json      200          1.53 s           ▊   ▐││     "maxPolls": 20,                                         │
│ challenge              144 B json      200          386 ms           ▏   ▐││     "features": {                                           │
│ config                   0 B           302           61 ms           ▏   ▐│╰─────────────────────────────────────────────────────────────╯
│ ↪ config.json          106 B json      200          195 ms           ▏   ▐│╭─ Overview ─ Response ─ Request ─ Call Stack ────────────────╮
│ attest                 180 B json      200          2.75 s           ▐█  ▐││ Request           init                                      │
│ metrics                  6 B protobuf  200          224 ms           ▕   ▐││ Method            POST                                      │
│ monitor                302 B json      200          1.41 s            ▋  ▐││ Status            200 OK                                    │
│ events                  17 B json      200          1.14 s            ▌  ▐││ URL               https://deepid.example.app/api/sdk/init   │
│ liveness-model-v3…     150 B json      404          346 ms            ▏  ▐││ Request type      application/json; charset=utf-8           │
│ enroll                  72 B json      200          2.08 s            ▕▊ ▐││ Response type     application/json; charset=utf-8           │
│ documents               93 B json      200          515 ms            ▕▏ ▐││ Response size     316 B                                     │
│ monitor                302 B json      200          1.50 s            ▕▋ ▐││ Request size      127 B                                     │
│ report                 305 B html      500          219 ms             ▏ ▐││ Token             JWT HS256 · expires 06:10:00.000 (in 59 mi│
│ lookup?fields=cou…     101 B json      200          507 ms             ▕ ▐││ Initiating thread DefaultDispatcher-worker-2  id 59 · call s│
│ monitor                302 B json      200          1.49 s             ▕▌▐││ Client            OkHttp 4.12.0                             │
│ status?sessionId=…     263 B json      200          326 ms             ▕  ││ Protocol          h2                                        │
│ threshold                              ···          1.90 s              █ ││ Remote address    34.93.12.207:443  connection c-2 (new)    │
│ events                  17 B json      200          970 ms              ▌ ││ TLS               TLSv1.3 · TLS_AES_128_GCM_SHA256          │
╰───────────────────────────────────────────────────────────────────────────╯╰─────────────────────────────────────────────────────────────╯
 ←→ tabs   ↑↓ move   / search   nN next/previous   y copy   w save   Enter fold   p parsed/source   ? help       ⚠ studio inspector present
