host/crates/tui/tests/snapshots/snapshots__detail_protobuf_request.snap
---
source: crates/tui/tests/snapshots.rs
expression: "detail(12.0, MEDIUM, path_is(\"/v1/metrics\"), \"ll\")"
---
 traffic-police  Pixel 8 [demo]  com.example.shop  pid 4312  ● LIVE  ✎ 1 rule active          26 requests · 14 KB in · 18 KB out · 1 failed
╭─ Network · all app traffic ────────────────────────────────────────────────────────────────── ━ Receiving 3.9 KB/s   ━ Sending 2.4 KB/s ─╮
│  12 KB/s                                                                                  ┊                                              │
│                                                                                           ┊           ▃▇▇▅▁                              │
│ 6.0 KB/s                                                                                  ┊         ▁▅█████▆▆▆▆▄▁         ▁▁▁▂▂▄▄▃▂▂▂▃▃▂ │
│                                                                                           ▃▄▅▆▇████▇█████████████▇▆▅▅▅▅▆▇███████████████ │
│        0 ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┊┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄ │
│                                                                                           🮂▀🮄🮆██████🮆🮅🮅🮅🮆████🮆🮅🮅🮆███🮆🮅🮄🮆██████████████🮆🮄 │
│ 4.0 KB/s                                                                                  ┊    ▔▔▔▔      ▔🮃🮃▔    ▔🮂▔    ▀████🮆🮂  🮂🮃▀▀🮂   │
│                                                                                           ┊                              ▀██🮄            │
│ 8.0 KB/s                                                                                  ┊                               ▔▔             │
│                                                                                           00:00.000            00:05.000                 │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Requests 26 ─ Connection ─ Thread ─ Rules ─ Logdawg ─────────────────────╮ ╭─ metrics ─ Response body ─ Request body ── protobuf · 6 B ─╮
│ Name                  Size  Type      Status         Time   Timeline      │ │ 1: 4                                                       │
│ token                364 B  json      200          513 ms           ▎    ▐│ │ 2: "ok"                                                    │
│ sessions             290 B  json      200          2.11 s           🮉▎   ▐│ │                                                            │
│ notifications        306 B  json      200          1.77 s           ▐▎   ▐│ │                                                            │
│ events                17 B  json      200          1.38 s           🮇▍   ▐│ │                                                            │
│ user_1024.png       4.9 KB  png       200          494 ms            ▎   ▐│ │                                                            │
│ notifications        306 B  json      200          1.33 s            🮉   ▐│ │                                                            │
│ products?catego…    1.0 KB  json      200          431 ms            ▏   ▐│ │                                                            │
│ config                 0 B            302           61 ms            ▕   ▐│ ╰────────────────────────────────────────────────────────────╯
│ ↪ config.json        103 B  json      200          315 ms            ▕   ▐│ ╭─ Overview ─ Response ─ Request ─ Call Stack ───────────────╮
│ items                149 B  json      200          2.79 s            🮇█  ▐│ │ POST /v1/metrics HTTP/2                                    │
│ metrics                6 B  protobuf  200          338 ms             ▏  ▐│ │                                                            │
│ notifications        306 B  json      200          1.65 s             ▊  ▐│ │ Headers (8)                                                │
│ events                17 B  json      200          1.09 s             ▌  ▐│ │ Host: telemetry.example.com                                │
│ promo-banner-v3…     148 B  json      404          277 ms             ▕  ▐│ │ Authorization: Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCIsI│
│ reviews               86 B  json      200          516 ms              ▎ ▐│ │   mtpZCI6InNob3AtMjAyNi0wOSJ9.eyJzdWIiOiJ1c2VyXzEwMjQiLCJpc│
│ notifications        306 B  json      200          1.72 s              ▊ ▐│ │   3MiOiJodHRwczovL2F1dGguZXhhbXBsZS5jb20iLCJhdWQiOiJzaG9wLW│
│ checkout              99 B  json      200          2.33 s              █ ▐│ │   FwaSIsInNjb3BlIjoiY2F0YWxvZyBvcmRlcnMiLCJpYXQiOjE3OTA2NTg│
│ cancel               305 B  html      500          222 ms              ▕ ▐│ │   2MDAsImV4cCI6MTc5MDY2MjIwMH0.gbW5DLdhPS-Aufb4O_qjlH8Cw_  │
│ lookup?fields=c…     120 B  json      200          291 ms              ▕ ▐│ │   9plDv0GVXKzKXIM7h                                        │
│ notifications        306 B  json      200          1.42 s              ▕▌▐│ │ Content-Type: application/x-protobuf                       │
│ events                17 B  json      200          958 ms               ▍ │ │ Content-Length: 173                                        │
│ status?orderId=…     146 B  json      200          329 ms               ▏ │ │ X-App-Version: 3.8.0                                       │
│ recommendations…                      ···          1.90 s               🮋 │ │ X-Request-Id: a9cacd25-3c5c-4036-a526-5fa9453191a7         │
╰───────────────────────────────────────────────────────────────────────────╯ ╰────────────────────────────────────────────────────────────╯
 ←→ tabs   ↑↓ move   / search   nN next/previous   y copy   w save   Enter fold   p parsed/source   ? help       ⚠ studio inspector present
